require(["$api/models","$api/hermes","$views/buttons","$social-artist-shared/strings/main.lang"],function(f,j,h,g){function c(a){this.trimmed_uri=this._trim_prefix(a);this.artist_uri=a;this.subscriber_count=this.is_subscribed=void 0;this.schema=n}function d(a){this.forCurrentUser=void 0===a;this.user=a;this.schema=n}function b(a){this.artistGraph=a;this.loadArtist=f.Artist.fromURI(a.artist_uri).load("user");this.state=k;this.button=h.Button.withLabel(b._follow);this.node=this.button.node}var l="proto/socialgraph.proto";
"sp:"!=window.location.protocol&&(l="$social-artist-shared/"+l);var n=j.Schema.fromURL(l),g=SP.bind(g.get,g);SP.inherit(c,f.Observable);c.prototype.load=function(){var a;a=1===arguments.length&&"array"===typeof arguments[0]?arguments[0]:Array.prototype.slice.call(arguments,0);for(var b=new f.Promise(this),m=[],i=0;i<a.length;i++){var e="_make_"+a[i];if(void 0!==this[a[i]])e=new f.Promise,e.setDone(),m.push(e);else if(c.prototype.hasOwnProperty(e))m.push(this[e].call(this));else return b.setFail(a[i]+
" is not a valid property."),b}f.Promise.join(m).always(function(a,c){void 0!==c?b.setFail():b.setDone()});return b};c.prototype._update_subscriber_count=function(a){this.subscriber_count=Math.max(0,a);this.dispatchEvent({type:"change:subscriber_count",subscriber_count:this.subscriber_count})};c.prototype._make_is_subscribed=function(){return this._request("hm://socialgraph/subscriptions/artist/","exists","GET","StringListRequest","StringListReply",this.trimmed_uri,function(a){this.is_subscribed=
"True"===a[0].reply[0]})};c.prototype._make_subscriber_count=function(){return this._request("hm://socialgraph/subscribers/artist/","count","GET","StringListRequest","CountReply",this.trimmed_uri,function(a){this._update_subscriber_count(a[0].counts[0])})};c.prototype.subscribe=function(){return this._request("hm://socialgraph/subscriptions/artist/","","POST","StringListRequest","StringListReply",this.trimmed_uri,function(){this._update_subscriber_count(this.subscriber_count+1);this.is_subscribed=
!0})};c.prototype.unsubscribe=function(){return this._request("hm://socialgraph/subscriptions/artist/","","DELETE","StringListRequest","StringListReply",this.trimmed_uri,function(){this._update_subscriber_count(this.subscriber_count-1);this.is_subscribed=!1})};c.prototype._trim_prefix=function(a){var b=a.indexOf("spotify:artist");return 0<=b?a.substr(b+14+1):a};c.prototype._request=function(a,b,c,i,e,d,g){var h=new f.Promise(this),a=j.Hermes.get(a+(0<b.length?b:""),[this.schema.type(e)],[this.schema.type(i)]);
a.resolve("method",c);a.send({args:[d]}).done(this,function(a){g.call(this,a);h.setDone()}).fail(function(){h.setFail()});return h};c.forArtist=function(a){return new c(a)};d.prototype.load=function(a){if("subscriptions"===a)return this._load_subscriptions();a=new f.Promise([]);a.setFail();return a};d.prototype._trimPrefix=function(a){var b=a.indexOf("spotify:user");return 0<=b?a.substr(b+12+1):a};d.prototype._load_subscriptions=function(){var a=[],b=new f.Promise(a),c="hm://socialgraph/subscriptions/artist/";
this.forCurrentUser||(c+=this._trimPrefix(this.user.uri));c=j.Hermes.get(c,[this.schema.type("StringListRequest")],[this.schema.type("StringListReply")]);c.resolve("method","GET");c.send({args:[]}).done(this,function(c){if((c=c[0].args)&&c.length)for(var e=0,d=c.length;e<d;e++)a.push(f.Artist.fromURI("spotify:artist:"+c[e].substr(2)));b.setDone()}).fail(b,b.setFail);return b};d.forUser=function(a){return new d(a)};d.forCurrentUser=function(){return new d};var k=0;b._unfollow=g("unfollow");b._follow=
g("follow");b._following=g("following");b.prototype.render=function(a){this.loadArtist.done(this,function(b){(this.isUser=b.user&&!!b.user.uri)?(this.userButton=h.SubscribeButton.forUser(b.user),this.userButton.addEventListener("subscribe",SP.bind(this._userSubscribe,this)),this.userButton.addEventListener("unsubscribe",SP.bind(this._userUnsubscribe,this)),this.node=this.userButton.node,a.appendChild(this.node)):this._renderSelf(a)}).fail(this,function(){this.isUser=!1;this._renderSelf(a)})};b.prototype._renderSelf=
function(a){this.node.className="sp-button sp-button-subscribe";this._updateMinWidth();this.button.setIconClass("sp-icon-add");this.artistGraph.load("is_subscribed").done(this,function(){this._toggleState()});this._bindEvents();a.appendChild(this.node)};b.prototype._updateMinWidth=function(){h.SubscribeButton.prototype._updateMinWidth.call(this.button)};b.prototype._toggleState=function(){this.artistGraph.is_subscribed?this._showUnfollow():this._showFollow()};b.prototype._mouseOver=function(){2==
this.node.getAttribute("data-toggle")&&(this.node.className="sp-button sp-button-subscribe sp-button-accentuated sp-button-accentuated-negative",this.button.setLabel(b._unfollow))};b.prototype._mouseOut=function(){2==this.node.getAttribute("data-toggle")?(this.node.className="sp-button sp-button-subscribe",this.button.setLabel(b._following)):1==this.node.getAttribute("data-toggle")&&(this.node.className="sp-button sp-button-subscribe sp-button-accentuated sp-button-accentuated-positive",this.button.setLabel(b._follow))};
b.prototype._userButtonClick=function(){if(1!==this.state){this.state=1;var a=this.userButton.item.subscribed?-1:1;this.artistGraph.load("subscriber_count").done(this,function(b){a+=b.subscriber_count;this.artistGraph._update_subscriber_count(a);this.state=k}).fail(function(){this.state=1})}};b.prototype._userSubscribe=function(){this.node.setAttribute("data-toggle",2);this._changeUserCount(1)};b.prototype._userUnsubscribe=function(){this.node.setAttribute("data-toggle",1);this._changeUserCount(-1)};
b.prototype._changeUserCount=function(a){this.artistGraph.load("subscriber_count").done(this,function(b){b._update_subscriber_count(b.subscriber_count+a)})};b.prototype._click=function(){if(1!==this.state){this.state=1;var a=function(){this.state=k};this.artistGraph[this.artistGraph.is_subscribed?"unsubscribe":"subscribe"].call(this.artistGraph).done(this,this._toggleState).done(this,a).fail(this,a)}};b.prototype._bindEvents=function(){this.node.addEventListener("mouseover",SP.bind(this._mouseOver,
this));this.node.addEventListener("mouseout",SP.bind(this._mouseOut,this));this.node.addEventListener("click",SP.bind(this._click,this))};b.prototype._showFollow=function(){this.node.setAttribute("data-toggle",1);this.button.setLabel(b._follow);this.button.setIconClass("sp-icon-add");this.node.className="sp-button sp-button-subscribe sp-button-accentuated sp-button-accentuated-positive"};b.prototype._showUnfollow=function(a){this.button.node.setAttribute("data-toggle",2);this.button.setIconClass("");
this.button.setLabel(a?b._unfollow:b._following)};b.forGraph=function(a){return new b(a)};b.forArtist=function(a){a=new c(a);return new b(a)};exports.ArtistGraph=c;exports.UserArtists=d;exports.ArtistSubscribeButton=b});
